# grounded-tracker

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
dll/: .gitignore  CMakeLists.txt  CMakePresets.json
dll/src/: dllmain.cpp
dll/src/core/: engine.cpp  engine.h  memory.cpp  memory.h  offsets.h  ue4_types.cpp  ue4_types.h
dll/src/game/: achievements.cpp  achievements.h  creature_cards.cpp  creature_cards.h  game_state.cpp  game_state.h  landmarks.cpp  landmarks.h  milk_molars.cpp  milk_molars.h  mixr.cpp  mixr.h  scab_schemes.cpp  scab_schemes.h  table_items.cpp  table_items.h  upgrades.cpp  upgrades.h
dll/src/ipc/: pipe_server.cpp  pipe_server.h  protocol.h
dll/src/overlay/: dx11_hook.cpp  dx11_hook.h  imgui_renderer.cpp  imgui_renderer.h  overlay_ui.cpp  overlay_ui.h
dll/src/util/: logger.cpp  logger.h
dll/tools/: inject_dumper7.py  injector.cpp
docs/: architecture.md  save-format.md
scripts/: download-wiki-images.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  connection.rs  errors.rs  lib.rs  main.rs  models.rs  pipe_client.rs  watcher.rs
src-tauri/src/categories/: bosses.rs  burgl_chips.rs  creature_cards.rs  landmarks.rs  milk_molars.rs  mixr.rs  mod.rs  ominent.rs  scab_schemes.rs  stuff.rs  wendell.rs
src-tauri/src/parser/: achievements.rs  binary.rs  creature_cards.rs  decompress.rs  extractor.rs  mod.rs  poi.rs  table_items.rs  themes.rs  upgrades.rs
src/components/: BossGrid.tsx  CategorySection.tsx  CollectibleGrid.tsx  CreatureGrid.tsx  ErrorBanner.tsx  Header.tsx  ImageCard.tsx  LandmarkGrid.tsx  LoadingScreen.tsx  MilkMolarSection.tsx
src/data/: bosses.ts  burgl-chips.ts  creature-cards.ts  landmarks.ts  mixr-challenges.ts  ominent.ts  scab-schemes.ts  stuff.ts  wendell.ts
src/hooks/: useSaveSync.ts
src/styles/: animations.css  globals.css
src/types/: save-data.ts
tools/mock-pipe/: mock_pipe_server.py  pipe_reader.py  test_client.py
tools/save-dumper/: Cargo.toml
tools/save-dumper/src/: main.rs
