[package]
name = "dt-grounded"
version = "1.1.0"
edition = "2021"

[lib]
name = "dt_grounded_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "dt-grounded"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
